--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="src/styles/styles.css"
+      href="styles/styles.css"
     />
   </head>
   <body>
@@ -107,7 +107,7 @@
           </div>
         </div>
 
-    <script src="src/js/scripts.js"></script>
+    <script src="js/scripts.js"></script>
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
 
   </body>
