--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
       
         <div class="project-card">
-            <img class="project-img" src="https://media.cybernews.com/images/featured/2020/12/What-is-AES-Encryption.jpg" alt="Project 1">
+            <img class="project-img" src="img/AES.png" alt="Project 1">
             <h2>Chaos based AES-256</h2>
             <p>Implementation of Chaos-based pNRG for AES-256 text encryption algorithm.</p>
             <div class="buttons">
