--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       </div>
       <div class="container">
         <div class="project-card">
-            <img src="img/Sine_tent_map_BD.png'" alt="Project 1">
+            <img class="project-img" src="img/Sine_tent_map_BD.png'" alt="Project 1">
             <h2>Chaotic-pRNG</h2>
             <p>pRNG based on a chaotic system which exhibits high lyapunov exponents for a big range of mu,
                the constant of the system. The system is a version which combines the tent map and the sine map. 
