--- a/index.html
+++ b/index.html
@@ -32,7 +32,15 @@
 
     <section class="hero">
         <div style="background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(img/hero-background.jpg); height:100vh; width:2000px; background-size: 1700px;">
-        
+          <div class="box">
+            <div class="inner">
+              <span>Rodrigo Morales Martínez</span>
+            </div>
+            <div class="inner">
+              <span>Rodrigo Morales Martínez</span>
+            </div>
+          </div>
+          
         </div>
     </section>
 
