--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
   <body>
     <header>
       <div class="container">
-        <h1>Rodrigo Morales Martínez</h1>
+        <h1>
+          <a href="index.html">Rodrigo Morales</a>
+        </h1>
         <nav id="navbar">
           <ul>
             <li><a href="#">About me</a></li>
             <li><a href="#">Experience</a></li>
-            <li><a href="#">Projects</a></li>
+            <li><a href="#Projects">Projects</a></li>
             <li><a href="#">Contact me</a></li>
           </ul>
         </nav>
@@ -32,19 +34,12 @@
 
     <section class="hero">
         <div style="background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(img/hero-background.jpg); height:100vh; width:2000px; background-size: 1700px;">
-          <div class="box">
-            <div class="inner">
-              <span>Rodrigo Morales Martínez</span>
-            </div>
-            <div class="inner">
-              <span>Rodrigo Morales Martínez</span>
-            </div>
-          </div>
+          
           
         </div>
     </section>
 
-    <section class="project-section">
+    <section id="Projects" class="project-section">
       <div class="text-container">
         <h1>
           My projects
@@ -95,9 +90,11 @@
             </div>
             <div class="contact contact-github">
                 <p>
-                  <i class="ri-github-fill"></i>
-                  <box-icon type='logo' color="#d3cccc" name='github'></box-icon>
-                  Github
+                  <a href="https://github.com/Rodrigo0730">
+                    <i class="ri-github-fill"></i>
+                    <box-icon type='logo' color="#d3cccc" name='github'></box-icon>
+                    Github
+                  </a>
                 </p>
             </div>
             <div class="contact contact-twitter">
